--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,216 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,700;1,400&family=Courgette&display=swap');
+
+:root {
+  --primary-color: #0f569c;
+  --primary-color-1: #004e98;
+  --primary-color-2: #1d5e9f;
+  --primary-color-3: #3a6ea5;
+  --primary-color-4: #3a6ea5;
+  --secondary-color: #ff6700;
+  --secondary-color1: #f5a976;
+  --gray-color: #c0c0c0;
+  --gray-color-1: #d6d6d6;
+  --gray-color-2: #ebebeb;
+  --main-white: #fff;
+  --main-black: #000;
+  --color-button: #006241;
+  --color-secondary-button: #d50032;
+  --primary-font: 'Chakra Petch', sans-serif;
+  --secondary-font: 'Courgette', cursive;
+  --transition: all 0.3s linear;
+  --radius: 5px;
+}
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+}
+img {
+  display: block;
+  width: 100%;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  font-size: 0.9rem;
+}
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  h4 {
+    font-size: 1.25rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+}
+body {
+  font-family: var(--primary-font);
+}
+.btn {
+  padding: 0.375rem 0.775rem;
+  display: inline-block;
+  background: var(--secondary-color);
+  text-transform: capitalize;
+  color: var(--main-white);
+  cursor: pointer;
+  border: transparent;
+  cursor: pointer;
+  border-radius: var(--radius);
+  transition: var(--transition);
+}
+.btn:hover {
+  background: rgba(0, 0, 0, 0.3);
+}
+.delete {
+  background: var(--color-secondary-button);
+}
+.read {
+  background: var(--color-button);
+  margin-right: 0.5rem;
+}
+body {
+  background: var(--gray-color-2);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  main {
+    width: 95vw;
+  }
+}
+/* SECTION TITLE */
+
+.section-title {
+  margin: 0 auto;
+  padding-top: 2rem;
+  text-align: center;
+}
+.section-title h1 {
+  font-family: var(--secondary-font);
+  text-shadow: 4px 3px 5px rgba(0, 0, 0, 0.2);
+  color: var(--main-white);
+  max-width: 35rem;
+  margin: 0 auto;
+  text-transform: capitalize;
+  color: var(--color-secondary-button);
+}
+.section-title span {
+  color: var(--color-secondary);
+}
+
+/* SEARCH-FORM */
+
+.search-form {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 2rem auto;
+  padding: 2rem 0;
+  border-bottom: 3px dotted var(--primary-color);
+}
+.search-input {
+  width: 50%;
+  padding: 0.775rem 1.5rem;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  border-radius: var(--radius);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  text-transform: capitalize;
+}
+/* BUTTON CONTAINER */
+.buttons-container {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+.news {
+  display: grid;
+  gap: 2rem;
+  margin: 2rem auto;
+}
+.buttons-container button:disabled {
+  cursor: not-allowed;
+}
+@media screen and (min-width: 768px) {
+  .news {
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  }
+}
+.single {
+  padding: 1rem;
+  background: var(--main-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: var(--radius);
+  transition: var(--transition);
+}
+.single:hover {
+  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9);
+  transform: scale(1.02);
+}
+.single span {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+.single .points {
+  color: var(--color-button);
+}
+.single .comments {
+  color: var(--color-secondary-button);
+}
+.single .author {
+  text-transform: capitalize;
+  color: #444;
+}
+.container {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.loading {
+  display: inline-block;
+  height: 6rem;
+  width: 6rem;
+  border: 1rem solid #ccc;
+  border-radius: 50%;
+  border-top-color: royalblue;
+  animation: spinner 0.6s linear infinite;
+}
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
 }
